--- a/src/app/passengers/containers/specials/specials.component.scss
+++ b/src/app/passengers/containers/specials/specials.component.scss
@@ -1,22 +1,19 @@
 @import 'src/app/core/sass/global';
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include container;
   gap: 0.7rem;
 }
 
 .main-button {
-  display: flex;
-  justify-content: center;
+  @include flex-center;
   margin: 0.5rem;
 }
 
 .specials-container {
   height: 28.1rem;
   width: 34.2rem;
-  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/specials-car.png');
+  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/specials-car.png');
   border-radius: 0.6rem;
   display: flex;
   justify-content: space-between;
@@ -25,7 +22,7 @@
 }
 
 .ambulance-container {
-  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/specials-ambulance.png');
+  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/specials-ambulance.png');
   height: 14.7rem;
   width: 34.2rem;
   border-radius: 0.6rem;
@@ -50,12 +47,11 @@
 }
 
 .armored-container {
-  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/specials-armored.png');
+  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/specials-armored.png');
 }
 
 .crane-container {
-  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/specials-crane.png');
-  background-size: cover;
+  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/specials-crane.png');
 }
 
 .label {
@@ -75,8 +71,7 @@
 
 .button,
 .label {
-  display: flex;
-  justify-content: center;
+  @include flex-center;
   font-weight: bold;
   margin: 1rem;
   font-size: 0.8rem;
