--- a/src/app/passengers/containers/experiences/experiences.component.scss
+++ b/src/app/passengers/containers/experiences/experiences.component.scss
@@ -1,24 +1,20 @@
 @import 'src/app/core/sass/global';
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include container;
   color: $white;
   gap: 0.7rem;
 }
 
 .main-button {
-  display: flex;
-  justify-content: center;
+  @include flex-center;
   margin: 0.5rem;
 }
 
 .label {
-  display: flex;
+  @include flex-center;
   font-weight: bold;
   align-self: flex-end;
-  justify-content: center;
   background-color: $green;
   color: $black;
   margin: 1.5rem;
@@ -34,7 +30,7 @@
 }
 
 .experience-container {
-  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/raptor.png');
+  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/raptor.png');
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -49,7 +45,7 @@
 }
 
 .driveit-container {
-  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/drive-it-yourself.png');
+  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/drive-it-yourself.png');
   display: flex;
   justify-content: center;
   align-items: center;
@@ -76,7 +72,7 @@
 }
 
 .car-container {
-  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/supra.png');
+  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/supra.png');
   display: flex;
   flex-direction: column;
   justify-content: space-between;
