--- a/src/app/shared/faq/components/faq.component.scss
+++ b/src/app/shared/faq/components/faq.component.scss
@@ -1,7 +1,7 @@
 @import 'src/app/core/sass/global';
 
 .container {
-  display: flex;
+  @include container;
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -9,6 +9,7 @@
 }
 
 .section {
+  display: flex;
   flex-direction: row;
 }
 
