--- a/src/app/passengers/containers/forgot-something/forgot-something.component.scss
+++ b/src/app/passengers/containers/forgot-something/forgot-something.component.scss
@@ -1,8 +1,7 @@
-@import 'src/app/core/sass/colors';
 @import 'src/app/core/sass/global';
 
 .section {
-  @include section;
+  @include flex-column;
   color: setColor(firm-gray, 300);
 }
 
