--- a/src/app/shared/faq/components/faq.component.scss
+++ b/src/app/shared/faq/components/faq.component.scss
@@ -1,7 +1,7 @@
 @import 'src/app/core/sass/global';
 
 .container {
-  @include container;
+  @include flex-column;
   justify-content: center;
   flex-direction: column;
   align-items: center;
