--- a/src/app/shared/profile/components/profile/profile.component.scss
+++ b/src/app/shared/profile/components/profile/profile.component.scss
@@ -1,7 +1,7 @@
 @import 'src/app/core/sass/global';
 
 .container {
-  @include container;
+  @include flex-column;
   font-weight: bold;
   gap: 0.15rem;
 }
