--- a/src/app/auth/containers/login/login.component.scss
+++ b/src/app/auth/containers/login/login.component.scss
@@ -1,7 +1,108 @@
+@import 'src/app/core/sass/global';
+
 .container {
-  display: flex;
-  height: 35rem;
-  flex-direction: column;
-  justify-content: center;
+  @include flex-column;
+  height: 80rem;
+  background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/login_prado.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.translate {
+  margin: 5rem 0 1rem 24rem;
+  padding-top: 0.2rem;
+  border-radius: 0.4rem;
+  height: 3.5rem;
+  width: 3.7rem;
+  background-color: $green;
+  @include flex-center;
+}
+
+.logo {
+  width: 15rem;
+  @include flex-column;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.icon {
+  padding: 0.2rem;
+  border-radius: 0.4rem;
   align-items: center;
+  justify-content: center;
+}
+
+.icon-b {
+  height: 3.2rem;
+  width: 15.8rem;
+  border-radius: 0.4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: $white;
+}
+
+.login {
+  @include flex-center;
+  flex-direction: row;
+  background-color: #00E741;
+  min-width: 31rem;
+  width: 87%;
+  height: 3rem;
+  border-radius: 0.4rem;
+}
+
+.login img {
+  object-fit: contain;
+  width: 75%;
+  height: 75%;
+  margin-left: 27.5rem;
+  margin-top: 0.3rem;
+  filter: brightness(0%);
+}
+
+.terms {
+  text-align: end;
+  font-weight: bold;
+  margin-top: 40rem;
+  border-radius: 0.3rem;
+  min-width: 31rem;
+  width: 87%;
+  height: 2.5rem;
+  background-image: linear-gradient(90deg, #00E741 10%, #ffffff 10%);
+
+  .text {
+    font-size: 1rem;
+    margin-top: 0.2rem;
+    margin-right: 0.3rem;
+  }
+}
+
+.version {
+  font-size: 1rem;
+  border-radius: 0.4rem;
+  font-weight: bold;
+  padding: 0rem 2.5rem 0rem 2.5rem;
+  background-color: #FAFF00;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.2rem;
+  margin-bottom: 0.3rem;
+  min-width: 31rem;
+  width: 87%;
+  
+  .input {
+    height: 3.5rem;
+    margin-top: 0.2rem;
+    text-align: center;
+  }
+}
+
+.form-field .input::placeholder {
+  text-align: center; 
+  line-height: 5rem; 
+  opacity: 50%;
 }
