--- a/src/app/shared/header/components/header/header.component.scss
+++ b/src/app/shared/header/components/header/header.component.scss
@@ -42,7 +42,9 @@
   border-radius: 0.5rem 1rem 1rem 0.5rem;
 
   .logo {
-    margin: 0.5rem 0 0 0;
+    align-items: center;
+    width: 6rem;
+    margin: 0.5rem 0.8rem 0.5rem 0.8rem;
   }
 
   .d-flex {
