review code recomendations implemented

--- a/src/app/shared/header/components/profile-header/profile-header.component.html
+++ b/src/app/shared/header/components/profile-header/profile-header.component.html
@@ -9,5 +9,5 @@
   </div>
 </div>
 <div class='profile-name'>
-  <p class="name" [textContent]="profileName"></p>
+  <p class="name">{{ profileName }}</p>
 </div>
