--- a/src/app/auth/containers/login/login.component.scss
+++ b/src/app/auth/containers/login/login.component.scss
@@ -54,7 +54,7 @@
 .login {
   display: flex;
   justify-content: flex-end;
-  background-color: #00E741;
+  background-color: $green;
   align-items: center;
   height: 3rem;
   min-width: 30rem;
@@ -75,7 +75,7 @@
   min-width: 30rem;
   width: 85%;
   height: 2.5rem;
-  background-image: linear-gradient(90deg, #00E741 10%, #ffffff 10%);
+  background-image: linear-gradient(90deg, $green 10%, $white 10%);
 
   .text {
     font-size: 1rem;
@@ -89,7 +89,7 @@
   border-radius: 0.4rem;
   font-weight: bold;
   padding: 0rem 2.5rem 0rem 2.5rem;
-  background-color: #FAFF00;
+  background-color: $yellow;
 }
 
 .form-field {
