--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -8,9 +8,10 @@
   </div>
   <div class="login-footer">
     <div class="terms">
+      <div class="green"></div>
       <p class="text">TERMINOS Y CONDICIONES</p>
     </div>
-    <form [formGroup]="emailForm" class="form-field">
+    <form [formGroup]="loginForm" class="form-field">
       <input
         class="input"
         placeholder="Ingresa tu email"
