--- a/src/app/auth/containers/login/login.component.scss
+++ b/src/app/auth/containers/login/login.component.scss
@@ -69,20 +69,32 @@
 }
 
 .terms {
+  display: flex;
   text-align: end;
   font-weight: bold;
   border-radius: 0.3rem;
   min-width: 30rem;
   width: 85%;
-  height: 2.5rem;
-  background-image: linear-gradient(90deg, $green 10%, $white 10%);
+  background-color: $white;
 
   .text {
     font-size: 1rem;
     margin-top: 0.2rem;
     margin-right: 0.3rem;
+    width: 90%;
+    height: 1rem;
+    color: $black;
+  }
+  .green {
+    background-color: $green;
+    width: 8%;
+    height: 18%;
+    padding: 1rem;
+    border-radius: 0.3rem;
   }
 }
+
+
 
 .version {
   font-size: 1rem;
@@ -95,14 +107,14 @@
 .form-field {
   display: flex;
   flex-direction: column;
-  margin-top: 0.2rem;
+  margin-top: 0.1rem;
   margin-bottom: 0.3rem;
   min-width: 30rem;
   width: 85%;
   
   .input {
     height: 3.5rem;
-    margin-top: 0.2rem;
+    margin-top: 0.3rem;
     text-align: center;
   }
 }
