--- a/src/app/auth/containers/login/login.component.scss
+++ b/src/app/auth/containers/login/login.component.scss
@@ -75,7 +75,7 @@
     height: 1rem;
     color: $black;
   }
-  
+
   .green {
     background-color: $green;
     width: 8%;
@@ -85,13 +85,11 @@
   }
 }
 
-
-
 .version {
   font-size: 1rem;
   border-radius: 0.4rem;
   font-weight: bold;
-  padding: 0rem 2.5rem 0rem 2.5rem;
+  padding: 0rem 2.5rem;
   background-color: $yellow;
 }
 
