--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -1,7 +1,9 @@
 <div class="container monserrat">
   <div class="login-header">
     <div class="translate-box" > 
-      <img class="translate" src="assets/images/translate.svg" alt="translate">
+      <div class="translate">
+      <img class="icon" src="assets/images/translate.svg" alt="translate">
+      </div>
     </div>
     <img class="logo" src="assets/images/logo.svg">
     <p class="version">ALFA</p>
