--- a/src/app/shared/header/components/header/header.component.scss
+++ b/src/app/shared/header/components/header/header.component.scss
@@ -44,7 +44,7 @@
   .logo {
     align-items: center;
     width: 6rem;
-    margin: 0.5rem 0.8rem 0.5rem 0.8rem;
+    margin: 0.5rem 0.8rem;
   }
 
   .d-flex {
