--- a/src/app/auth/containers/login/login.component.scss
+++ b/src/app/auth/containers/login/login.component.scss
@@ -1,32 +1,38 @@
 @import 'src/app/core/sass/global';
 
 .container {
-  @include flex-column;
+  height: 100%;
   background-image: url('https://biz-app-bucket.s3.us-east-2.amazonaws.com/login_prado.png');
   background-repeat: no-repeat;
-  justify-content: space-between;
   background-size: 100% 100%;
-  height: 100%;
+  justify-content: space-between;
+  @include flex-column;
 
-  .login-header, .login-footer {
-    @include flex-column;
-    width: 100%;
+  .login-header,
+  .login-footer {
     margin-bottom: 4rem;
+    width: 100%;
+    @include flex-column;
   }
 }
 
 .translate-box {
-  justify-content: flex-end;
-  display: flex;
-  align-items: end;
   height: 7rem;
   width: 80%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .translate {
-  height: 3rem;
+  width: 4rem;
   border-radius: 0.4rem;
   background-color: $green;
+
+  .icon {
+    margin-left: 0.5rem;
+    margin-top: 0.8rem;
+  }
 }
 
 .logo {
@@ -42,14 +48,14 @@
 }
 
 .login {
-  display: flex;
-  justify-content: flex-end;
-  background-color: $green;
-  align-items: center;
   height: 3rem;
   min-width: 30rem;
   width: 85%;
+  background-color: $green;
   border-radius: 0.4rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .button-image {
@@ -59,48 +65,48 @@
 }
 
 .terms {
-  display: flex;
-  text-align: end;
-  font-weight: bold;
-  border-radius: 0.3rem;
-  min-width: 30rem;
   width: 85%;
+  min-width: 30rem;
   background-color: $white;
+  border-radius: 0.3rem;
+  font-weight: bold;
+  text-align: end;
+  display: flex;
 
   .text {
-    font-size: 1rem;
-    margin-top: 0.2rem;
-    margin-right: 0.3rem;
     width: 90%;
     height: 1rem;
+    font-size: 1rem;
+    margin-right: 0.3rem;
+    margin-top: 0.2rem;
     color: $black;
   }
 
   .green {
-    background-color: $green;
     width: 8%;
     height: 18%;
     padding: 1rem;
     border-radius: 0.3rem;
+    background-color: $green;
   }
 }
 
 .version {
-  font-size: 1rem;
-  border-radius: 0.4rem;
-  font-weight: bold;
   padding: 0rem 2.5rem;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 0.4rem;
   background-color: $yellow;
 }
 
 .form-field {
-  display: flex;
-  flex-direction: column;
+  width: 85%;
+  min-width: 30rem;
   margin-top: 0.1rem;
   margin-bottom: 0.3rem;
-  min-width: 30rem;
-  width: 85%;
-  
+  display: flex;
+  flex-direction: column;
+
   .input {
     height: 3.5rem;
     margin-top: 0.3rem;
