secondary button created

--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -11,10 +11,14 @@
     </div>
     <div class="row">
       <div class="options">
-        <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/call.png" alt="Llamada">
+        <app-secondary-button>
+          <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/call.png" alt="Llamada">
+        </app-secondary-button> 
       </div>
       <div class="options">
-        <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/message.png" alt="Mensaje">
+        <app-secondary-button>
+          <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/message.png" alt="Mensaje">
+        </app-secondary-button>
       </div>
     </div>
   </div>
