--- a/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
+++ b/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
@@ -21,15 +21,15 @@
   justify-content: center;
   align-items: center;
   background-color: $green;
-  width: 2.5rem;
-  height: 1.5rem;
+  width: 3.3rem;
+  height: 2rem;
   border-radius: 0.4rem;
   position: absolute;
-  top: 0.7rem;
+  bottom: 5.3rem;
   right: 1rem;
 
   .icon {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     color: $black;
   }
 }
