auth mutation added, connection to backend implemented

--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container monserrat">
   <div class="login-header">
-    <div class="translate-box" > 
+    <div class="translate-box" >
       <div class="translate">
       <img class="icon" src="assets/images/translate.svg" alt="translate">
       </div>
@@ -20,7 +20,7 @@
         formControlName="email"
         maxlength="50"
         minlength="1"
-        require
+        required
       >
       <input
         class="input"
