--- a/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
+++ b/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
@@ -1,4 +1,5 @@
 @import 'src/app/core/sass/index';
+@import 'src/app/core/sass/global';
 
 .btn {
   border-radius: 0.5rem;
@@ -17,9 +18,7 @@
 }
 
 .icon-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex-center;
   background-color: $green;
   width: 3.3rem;
   height: 2rem;
