Set Gotham as default font and removed Monserrat

--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container monserrat">
+<div class="container">
   <div class="login-header">
     <div class="translate-box" >
       <div class="translate">
