--- a/src/app/passengers/containers/accident/accident.component.html
+++ b/src/app/passengers/containers/accident/accident.component.html
@@ -1,7 +1,7 @@
 <app-shared-header></app-shared-header>
 <div class="container">
   <section class="section">
-    <div class="text monserrat">
+    <div class="text">
       TUVE UN ACCIDENTÉ
     </div>
     <div class="info">
@@ -10,7 +10,7 @@
       gastos, llena los siguientes datos y luego espera ser contactado
       por nuestro servicio al cliente.
     </div>
-    <div class="text monserrat">
+    <div class="text">
       ¿SALISTE HERIDO?
     </div>
     <form [formGroup]="accidentForm">
@@ -20,7 +20,7 @@
           <mat-radio-button [value]="false">NO</mat-radio-button>
         </div>
       </mat-radio-group>
-      <div class="text monserrat">
+      <div class="text">
         CUÉNTANOS
       </div>
       <mat-form-field class="form-field">
