--- a/src/app/passengers/containers/airport/airport.component.html
+++ b/src/app/passengers/containers/airport/airport.component.html
@@ -2,7 +2,7 @@
 <div class="main-button">
   <app-primary-button>MIS VIAJES</app-primary-button>
 </div>
-<div class="container monserrat">
+<div class="container">
   <section class="airport-banner-container">
   </section>
   <section class="airport-gap-container">
