--- a/src/app/passengers/containers/specials/specials.component.html
+++ b/src/app/passengers/containers/specials/specials.component.html
@@ -1,5 +1,5 @@
 <app-shared-header></app-shared-header>
-<div class="container monserrat">
+<div class="container">
   <section class="specials-container">
     <div class="label main-banner-soon">SOON</div>
     <div class="button-container">
