--- a/src/app/shared/buttons/components/white-button/white-button.component.html
+++ b/src/app/shared/buttons/components/white-button/white-button.component.html
@@ -1,4 +1,4 @@
-<div class="button-container monserrat">
+<div class="button-container inter">
   <div class="icon-container" *ngIf="showNotification"> 
     <span class="material-icons-round icon">
       notifications
