--- a/src/app/shared/calendar/components/calendar.component.html
+++ b/src/app/shared/calendar/components/calendar.component.html
@@ -1,4 +1,4 @@
-<div class="calendar-container monserrat">
+<div class="calendar-container">
  <section class="logo-wrapper">
   <img class="logo" [src]='imageUrl' alt="logo" />
   <div class="label">{{month}}</div>
