--- a/src/app/shared/customer-service/components/customer-service.component.html
+++ b/src/app/shared/customer-service/components/customer-service.component.html
@@ -1,4 +1,4 @@
-<div class="container monserrat">
+<div class="container">
 
   <div class="header-container">
     <app-shared-header></app-shared-header>
