--- a/src/app/shared/faq/components/faq.component.html
+++ b/src/app/shared/faq/components/faq.component.html
@@ -1,5 +1,5 @@
 <app-shared-header></app-shared-header>
-<div class="container monserrat">
+<div class="container">
   <div class="text">
     <div class="title">CUENTA</div>
   </div>
