--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <app-shared-header></app-shared-header>
-<div class="container monserrat">
+<div class="container">
   <app-profile-header imgSrc="https://biz-app-bucket.s3.us-east-2.amazonaws.com/profile-image.png"></app-profile-header>
   <div class='profile-name'>
     <p class="name">PROFILE NAME</p>
