--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ body {
 
 body {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Gotham', sans-serif;
 }
 
 * {
@@ -39,8 +39,8 @@ a {
 
 .pointer { cursor: pointer; }
 
-.monserrat {
-  font-family: 'Montserrat', sans-serif;
+.inter {
+  font-family: 'Inter', sans-serif;
   letter-spacing: 0.05rem;
 }
 
