--- a/src/app/passengers/containers/forgot-something/forgot-something.component.html
+++ b/src/app/passengers/containers/forgot-something/forgot-something.component.html
@@ -1,6 +1,6 @@
 <app-shared-header></app-shared-header>
 <section class="section">
-  <div class="text monserrat">
+  <div class="text">
     OLVIDÉ ALGO
   </div>
   <div class="info">
@@ -12,7 +12,7 @@
     nuestros números de servicio al cliente que
     24 horas del día.
   </div>
-  <div class="text monserrat">
+  <div class="text">
     CUENTANOS
   </div>
   <form [formGroup]="forgotSomethingForm">
