--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -1,5 +1,5 @@
 <app-shared-header></app-shared-header>
-<div class="container monserrat">
+<div class="container">
   <section class="trip-container">
     <div class="label">7 MIN.</div>
     <app-white-button message="SOLICITAR UNIDAD"></app-white-button>
