--- a/src/app/passengers/containers/accident/accident.component.html
+++ b/src/app/passengers/containers/accident/accident.component.html
@@ -4,7 +4,7 @@
     <div class="text">
       TUVE UN ACCIDENTÉ
     </div>
-    <div class="info">
+    <div class="info inter">
       Si estuvo involucrado en algún accidente con alguno de nuestros
       choferes, contamos con un seguro de viaje que cubre parte de tus
       gastos, llena los siguientes datos y luego espera ser contactado
