--- a/src/app/passengers/containers/forgot-something/forgot-something.component.html
+++ b/src/app/passengers/containers/forgot-something/forgot-something.component.html
@@ -3,7 +3,7 @@
   <div class="text">
     OLVIDÉ ALGO
   </div>
-  <div class="info">
+  <div class="info inter">
     Si dejó algo olvidado contactanos Io más
     pronto posible, y brindenos la mayor cantidad
     de detalles, Ie conectaremos directamente
