--- a/src/app/shared/buttons/components/toggle-button/toggle-button.component.html
+++ b/src/app/shared/buttons/components/toggle-button/toggle-button.component.html
@@ -1,4 +1,4 @@
-<div class="toggle inter" [class.checked]="checked" (click)="toggle()">
+<div class="toggle" [class.checked]="checked" (click)="toggle()">
   <div class="toggle-label">{{ label }}</div>
   <div class="toggle-switch">
     <div class="toggle-ball"></div>
