--- a/src/app/shared/buttons/components/secondary-button/secondary-button.component.html
+++ b/src/app/shared/buttons/components/secondary-button/secondary-button.component.html
@@ -1,6 +1,6 @@
 <button
   mat-button
-  class="btn inter"
+  class="btn"
   [class]="styleClass"
   [disabled]="disableButton"
   (click)="btnClick.emit($event)"
