Trip view created

--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -24,6 +24,6 @@
   </section>
 </div>
 
-<div class="main-button">
+<div class="main-button" [routerLink]="['../trip']">
   <app-primary-button>MIS VIAJES</app-primary-button>
 </div>
