--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -1,6 +1,6 @@
 <app-shared-header></app-shared-header>
 <div class="container">
-  <section class="trip-container">
+  <section class="trip-container" routerLink="/passenger/trip">
     <div class="label">7 MIN.</div>
     <app-white-button message="SOLICITAR UNIDAD"></app-white-button>
   </section>
@@ -24,6 +24,6 @@
   </section>
 </div>
 
-<div class="main-button" [routerLink]="['../trip']">
+<div class="main-button">
   <app-primary-button>MIS VIAJES</app-primary-button>
 </div>
