--- a/src/app/passengers/containers/trip/trip.component.html
+++ b/src/app/passengers/containers/trip/trip.component.html
@@ -1,12 +1,13 @@
 <app-shared-header></app-shared-header>
 <div class="container">
   <div class="map">
-  <app-maps></app-maps>
+    <app-maps></app-maps>
   </div>
-  <div class="text inter"> --O IR A--</div>
   <div class="options">
-    <app-secondary-button class="btn">Eventos</app-secondary-button>
-    <app-secondary-button class="btn">Programar</app-secondary-button>
+    <app-secondary-button>EVENTOS</app-secondary-button>
+    <app-secondary-button>PROGRAMAR</app-secondary-button>
   </div>
-  <app-primary-button class="confirm">CONFIRMAR DESTINO</app-primary-button>
+  <app-primary-button class="confirm">CONFIRMAR DESTINO
+    <img class="button-image" src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/iiz-green.png">
+  </app-primary-button>
 </div>
