header component name added and overall improvements to code

--- a/src/app/core/sass/biiz-theme.scss
+++ b/src/app/core/sass/biiz-theme.scss
@@ -6,7 +6,7 @@
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 
-$biiz-typography: mat.define-typography-config($font-family: "Inter, sans-serif");
+$biiz-typography: mat.define-typography-config($font-family: "Gotham, sans-serif");
 
 @include mat.core();
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
