--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -1,9 +1,6 @@
 <app-shared-header></app-shared-header>
 <div class="container">
-  <app-profile-header
-    imgSrc="https://biz-app-bucket.s3.us-east-2.amazonaws.com/profile-image.png"
-    [showEditIcon]="true">
-  </app-profile-header>
+  <app-profile-header [showEditIcon]="true"></app-profile-header>
   <section class="profile-options">
     <div class="row">
       <app-display-button message="MIS VIAJES" class="top-left"></app-display-button>
