--- a/src/app/shared/calendar/components/calendar.component.scss
+++ b/src/app/shared/calendar/components/calendar.component.scss
@@ -41,7 +41,6 @@
   }
 }
 
-
 .calendar-container {
   display: flex;
   gap: 2rem;
@@ -67,11 +66,20 @@
   }
 
   .label {
+    font-size: 0.8rem;
     position: relative;
     margin-top: 1.5rem;
   }
+  .arrow {
+    font-size: 1.3rem;
+    margin: 0.5rem;
+    padding: 0.1rem;
+    height: 1.4rem;
+    border-radius: 2rem;
+    color: $white;
+    background-color: none;
+  }
 }
-
 
 .date {
   display: flex;
