weather api image implemented in header

--- a/src/app/shared/header/components/header/header.component.html
+++ b/src/app/shared/header/components/header/header.component.html
@@ -16,7 +16,7 @@
       <img class="logo" (click)='navigate()' src="assets/images/logo.svg" alt="Logo">
 
       <div class="d-flex">
-        <img class="weather" src="assets/images/weather.svg" alt="weather">
+        <img class="weather" [src]="weatherImage" alt="weather">
         <img class="translate" src="assets/images/translate.svg" alt="translate">
       </div>
     </section>
