--- a/src/app/shared/calendar/components/calendar.component.scss
+++ b/src/app/shared/calendar/components/calendar.component.scss
@@ -70,13 +70,13 @@
     position: relative;
     margin-top: 1.5rem;
   }
+
   .arrow {
     font-size: 1.3rem;
     margin: 0.5rem;
-    padding: 0.1rem;
     height: 1.4rem;
     border-radius: 2rem;
-    color: $white;
+    color: $black;
     background-color: none;
   }
 }
