--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -1,4 +1,5 @@
 <app-shared-header></app-shared-header>
+<app-calendar class="main-button"></app-calendar>
 <div class="container">
   <section class="trip-container">
     <div class="label">7 MIN.</div>
