--- a/src/app/shared/calendar/components/calendar.component.scss
+++ b/src/app/shared/calendar/components/calendar.component.scss
@@ -53,6 +53,48 @@
   letter-spacing: 0rem;
 }
 
+.arrow-label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 7.3rem;
+  margin-left: 2rem;
+
+  .logo {
+    position: absolute;
+    width: 4.5rem;
+  }
+
+  .label {
+    position: relative;
+    justify-content: center;
+    font-size: 0.8rem;
+    margin-top: 1.5rem;
+    width: 7rem;
+  }
+
+  .arrow {
+    font-size: 1rem;
+    margin-top: 0.3rem;
+    height: 1.4rem;
+    border-radius: 2rem;
+    color: $black;
+    background-color: none;
+    position: absolute;
+    right: 0;
+  }
+
+  .arrow-l {
+    font-size: 1rem;
+    margin-top: 0.3rem;
+    height: 1.4rem;
+    color: $black;
+    background-color: none;
+    position: absolute;
+    left: 0;
+  }
+}
+
 .logo-wrapper {
   display: flex;
   flex-direction: column;
@@ -69,15 +111,6 @@
     font-size: 0.8rem;
     position: relative;
     margin-top: 1.5rem;
-  }
-
-  .arrow {
-    font-size: 1.3rem;
-    margin: 0.5rem;
-    height: 1.4rem;
-    border-radius: 2rem;
-    color: $black;
-    background-color: none;
   }
 }
 
@@ -122,4 +155,17 @@
   border-radius: 0.5rem;
   background-color: $green;
   color: $black
+}
+
+.custom-input {
+  border: none;
+  border-radius: 0.5rem;
+  background-color: $green;
+  font-weight: bold;
+  font-size: 1rem;
+  height: 2.1rem;
+  width: 2.9rem;
+  margin-bottom: 0;
+  text-align: center; 
+  outline: none; 
 }
