--- a/src/app/passengers/containers/trip/trip.component.html
+++ b/src/app/passengers/containers/trip/trip.component.html
@@ -4,8 +4,8 @@
     <app-maps></app-maps>
   </div>
   <div class="options">
-    <app-secondary-button>EVENTOS</app-secondary-button>
-    <app-secondary-button>PROGRAMAR</app-secondary-button>
+    <app-secondary-button class="btn">EVENTOS</app-secondary-button>
+    <app-secondary-button class="btn">PROGRAMAR</app-secondary-button>
   </div>
   <app-primary-button class="confirm">CONFIRMAR DESTINO
     <img class="button-image" src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/iiz-green.png">
