--- a/src/app/passengers/containers/trip/trip.component.scss
+++ b/src/app/passengers/containers/trip/trip.component.scss
@@ -39,10 +39,15 @@
 }
 
 .confirm {
-  text-align: center;
   margin-top: 0.5rem;
   min-width: 34rem;
   width: 85%;
   background-color: $black;
   border-radius: 0.4rem;
+}
+
+.button-image {
+  height: 1.6rem;
+  position: relative;
+  left: 22%;
 }
