--- a/src/app/passengers/containers/trip/trip.component.html
+++ b/src/app/passengers/containers/trip/trip.component.html
@@ -7,7 +7,8 @@
     <app-secondary-button class="btn">EVENTOS</app-secondary-button>
     <app-secondary-button class="btn">PROGRAMAR</app-secondary-button>
   </div>
-  <app-primary-button class="confirm">CONFIRMAR DESTINO
+  <app-primary-button class="confirm">
+    <div class="text">CONFIRMAR DESTINO</div>
     <img class="button-image" src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/iiz-green.png">
   </app-primary-button>
 </div>
