--- a/src/app/passengers/containers/trip/trip.component.scss
+++ b/src/app/passengers/containers/trip/trip.component.scss
@@ -26,28 +26,33 @@
   display: flex;
   flex-direction: row;
   gap: 0.4rem;
-  min-width: 34rem;
-  width: 85%;
+  width: 34rem;
 
   .btn {
     text-align: center;
     background-color: $black;
     min-width: 16.9rem;
-    width: 100%;
     border-radius: 0.4rem;
   }
 }
 
 .confirm {
   margin-top: 0.5rem;
-  min-width: 34rem;
-  width: 85%;
+  width: 34rem;
   background-color: $black;
   border-radius: 0.4rem;
+
+  .text {
+    text-align: center;
+    margin-left: 6rem;
+    margin-top: 2.5rem;
+  }
+
 }
 
 .button-image {
   height: 1.6rem;
   position: relative;
-  left: 22%;
+  bottom: 2.3rem;
+  left: 43%;
 }
