displayButton link fixed

--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -13,12 +13,12 @@
   <section class="shared-container">
     <app-display-button
       message ="VIAJE AEROPUERTO"
-      routerLink="../airport"
+      link="../airport"
       class="airport-container display-btn"
     ></app-display-button>
     <app-display-button
       message="ESPECIALES"
-      routerLink="../specials"
+      link="../specials"
       class="specials-container display-btn"
     ></app-display-button>
   </section>
