--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -4,7 +4,7 @@
   <section class="profile-options">
     <div class="row">
       <app-display-button message="MIS VIAJES" class="top-left"></app-display-button>
-      <app-display-button message="MIS DATOS" class="top-right"></app-display-button>
+      <app-display-button message="MIS DATOS" class="top-right" link="/passenger/user-info"></app-display-button>
     </div>
     <div class="row">
       <app-display-button message="INGRESAR TARJETA" class="bottom-left"></app-display-button>
