--- a/src/app/shared/buttons/components/display-button/display-button.component.html
+++ b/src/app/shared/buttons/components/display-button/display-button.component.html
@@ -1,4 +1,4 @@
-<section class="display-container" [attr.routerLink]="routerLink !== '' ? routerLink : null">
+<section class="display-container" [routerLink]="link !== '' ? link : null">
   <div class="title">{{ title }}</div>
   <app-white-button [message]="message"></app-white-button>
 </section>
