user info view created

--- a/src/app/core/sass/_colors.scss
+++ b/src/app/core/sass/_colors.scss
@@ -13,6 +13,7 @@ $scheme: (
     firm-gray: (
         default: #CFCFCF,
         0: #CFCFCF,
+        10:#f7f8f9,
         50: #AFAFAF,
         100: #AEAEAE,
         200: #97ADB6,
