--- a/src/app/passengers/containers/user-info/user-info.component.html
+++ b/src/app/passengers/containers/user-info/user-info.component.html
@@ -5,10 +5,11 @@
     <p>NOMBRE COMPLETO</p>
     <input
       type="text"
-      [value]="user.fullName"
       class="custom-input"
+      [value]="user.fullName"
       required
       pattern="^[a-zA-Z\s]+$"
+      readonly
     />
     <p>DIRECCION PRINCIPAL</p>
     <input
@@ -18,6 +19,7 @@
       maxlength="100"
       minlength="6"
       required
+      readonly
     />
     <div class="row">
       <div class="section">
@@ -29,6 +31,7 @@
           maxlength="100"
           minlength="6"
           required
+          readonly
         />
       </div>
       <div class="section">
@@ -40,6 +43,7 @@
           maxlength="10"
           minlength="6"
           required
+          readonly
         />
       </div>
     </div>
@@ -59,6 +63,6 @@
   </div>
   <div class="notification">
     NOTIFICACIONES
-    <app-toggle-button> </app-toggle-button>
+    <app-toggle-button></app-toggle-button>
   </div>
 </div>
