--- a/src/app/passengers/containers/user-info/user-info.component.scss
+++ b/src/app/passengers/containers/user-info/user-info.component.scss
@@ -61,9 +61,9 @@
 
   .text {
     position: absolute;
+    color: $white;
     top: 75%;
     left: 72%;
-    color: $white;
   }
 
   .soon {
@@ -89,11 +89,10 @@
 }
 
 .custom-input {
-  background-color: setColor(firm-gray, 100);
-  opacity: 30%;
+  background-color: setColor(firm-gray, 10);
   border: none;
   border-radius: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.3rem;
   height: 5rem;
   width: 33rem;
   margin-bottom: 0.5rem;
@@ -112,14 +111,14 @@
   }
 
   .custom-input-s {
-    background-color: setColor(firm-gray, 100);
+    background-color: setColor(firm-gray, 10);
     border: none;
-    opacity: 30%;
     border-radius: 0.5rem;
-    font-size: 1rem;
+    font-size: 1.3rem;
     height: 5rem;
     width: 15rem;
     margin-bottom: 0.8rem;
     outline: none;
+    text-align: center;
   }
 }
