--- a/src/app/passengers/containers/user-info/user-info.component.scss
+++ b/src/app/passengers/containers/user-info/user-info.component.scss
@@ -25,7 +25,7 @@
 }
 .scanner .image-container {
   position: absolute;
-  right: 82%; 
+  right: 82%;
   top: 12%;
 }
 
@@ -37,7 +37,7 @@
   margin-top:0.4rem ;
 }
 
-.btn-scanner {
+.btn-scanner, .btn-id {
   color: $white;
   display: flex;
   align-items: center;
@@ -49,7 +49,7 @@
   border-radius: 0.4rem;
 }
 
-.row-btn div:nth-child(1) {
+.btn-id {
   background-color: $green;
   color: $black;
 }
