Program trip view created

--- a/src/app/passengers/containers/trip/trip.component.html
+++ b/src/app/passengers/containers/trip/trip.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="options">
     <app-secondary-button class="btn">EVENTOS</app-secondary-button>
-    <app-secondary-button class="btn">PROGRAMAR</app-secondary-button>
+    <app-secondary-button class="btn" routerLink="/passenger/program-trip">PROGRAMAR</app-secondary-button>
   </div>
   <app-primary-button class="confirm">
     <div class="text">CONFIRMAR DESTINO</div>
