--- a/src/app/shared/maps/components/maps.component.html
+++ b/src/app/shared/maps/components/maps.component.html
@@ -1,3 +1,6 @@
-<div *ngIf="apiLoaded | async">
-  <google-map></google-map>
+<div *ngIf="apiLoaded | async" class="map">
+  <google-map
+  height="80rem"
+  width="40rem"
+  ></google-map>
 </div>
